--- a/sgd-webapp/src/main/resources/application.properties
+++ b/sgd-webapp/src/main/resources/application.properties
@@ -14,3 +14,8 @@ server.servlet.context-path=/
 #spring.thymeleaf.enabled=false
 
 server.port=8090
+
+#Logging
+logging.file.name=sgd.log
+logging.file.max-size=10MB
+logging.file.max-history=10
