--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,16 @@ sgd-domain/target/
 sgd-services/target/
 sgd-webapp/target/
 .settings/
+sgd-webapp/.settings/
+sgd-services/.settings/
+sgd-domain/.settings/
 .project
 .DS_Store
+sgd-webapp/.DS_Store
 sgd-webapp/src/.DS_Store
 sgd-webapp/src/main/.DS_Store
 sgd-webapp/src/main/webapp/.DS_Store
+sgd-webapp/src/main/webapp/assets/.DS_Store
 .factorypath
 sgd-domain/.factorypath
 sgd-services/.factorypath
