--- a/sgd-webapp/pom.xml
+++ b/sgd-webapp/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>sgd</artifactId>
 		<groupId>com.fhce</groupId>
-		<version>0.0.1</version>
+		<version>0.0.2</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -108,6 +108,14 @@
 				</configuration>
 			</plugin>
 		</plugins>
+
+		<resources>
+			<resource>
+				<filtering>true</filtering>
+				<directory>src/main/resources</directory>
+			</resource>
+		</resources>
+
 	</build>
 
 </project>
