--- a/sgd-webapp/src/main/resources/application.properties
+++ b/sgd-webapp/src/main/resources/application.properties
@@ -19,3 +19,5 @@ server.port=8090
 logging.file.name=sgd.log
 logging.file.max-size=10MB
 logging.file.max-history=10
+
+build.version=@project.version@
