--- a/sgd-webapp/src/main/resources/application.properties
+++ b/sgd-webapp/src/main/resources/application.properties
@@ -21,3 +21,7 @@ logging.file.max-size=10MB
 logging.file.max-history=10
 
 build.version=@project.version@
+
+spring.ldap.embedded.port=8389
+spring.ldap.embedded.ldif=classpath:users.ldif
+spring.ldap.embedded.base-dn=dc=springframework,dc=org
