--- a/sgd-webapp/src/main/resources/application.properties
+++ b/sgd-webapp/src/main/resources/application.properties
@@ -5,7 +5,6 @@ spring.datasource.username=root
 spring.datasource.password=mysqlroot
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-#spring.datasource.jndi-name=java:jboss/datasources/MySqlDS8
 
 
 server.servlet.context-path=/
@@ -16,9 +15,9 @@ server.servlet.context-path=/
 server.port=8090
 
 #Logging
-logging.file.name=sgd.log
-logging.file.max-size=10MB
-logging.file.max-history=10
+#logging.file.name=sgd.log
+#logging.file.max-size=10MB
+#logging.file.max-history=10
 
 build.version=@project.version@
 
