--- a/sgd-webapp/src/main/resources/application.properties
+++ b/sgd-webapp/src/main/resources/application.properties
@@ -23,4 +23,4 @@ build.version=@project.version@
 
 spring.ldap.embedded.port=8389
 spring.ldap.embedded.ldif=classpath:users.ldif
-spring.ldap.embedded.base-dn=dc=springframework,dc=org
+spring.ldap.embedded.base-dn=dc=fhce,dc=edu,dc=uy
