--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.fhce</groupId>
 	<artifactId>sgd</artifactId>
 	<packaging>pom</packaging>
-	<version>0.1.0</version>
+	<version>${sgd.version}</version>
 	<modules>
 		<module>sgd-domain</module>
 		<module>sgd-services</module>
@@ -19,6 +19,7 @@
 	</modules>
 	<properties>
 		<java.version>17</java.version>
+		<sgd.version>0.2.0</sgd.version>
 	</properties>
 	<dependencies>
 		<!-- Spring Boot Starter Web, includes Tomcat and spring-webmvc -->
