--- a/sgd-domain/pom.xml
+++ b/sgd-domain/pom.xml
@@ -1,3 +1,4 @@
+
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -7,7 +8,7 @@
 	<parent>
 		<artifactId>sgd</artifactId>
 		<groupId>com.fhce</groupId>
-		<version>0.1.0</version>
+		<version>${sgd.version}</version>
 	</parent>
 
 	<artifactId>sgd-domain</artifactId>
