--- a/sgd-webapp/pom.xml
+++ b/sgd-webapp/pom.xml
@@ -106,7 +106,7 @@
 		<dependency>
 			<groupId>com.fhce</groupId>
 			<artifactId>sgd-domain</artifactId>
-			<version>0.2.0</version>
+			<version>${sgd.version}</version>
 		</dependency>
 	</dependencies>
 
